# ADAM-S-Serie-FW-Tests

./: AFT-533.py  S2V-TW.csv  TODO.txt  helpers.py  pyproject.toml  reference_data.py  regression_test.py  regression_tests.py  requirements.txt  requirements_dev.txt
.github/workflows/: audio_settings_tests.yml
AP Sequences/: Frequency_Response_AES3.approjx  Frequency_Response_XLR.approjx  Stepped_Level_Response.approjx
APx500 Python Guide/: APx500PythonExample.py
Reference Data/S2V/: REF_Custom_EQ_USER_2_Pg1_Settings.csv  REF_Custom_EQ_USER_2_Pg2_Settings.csv  REF_Custom_EQ_USER_2_Pg3_Settings.csv  REF_Custom_EQ_USER_2_Settings.csv  Ref_Delay_PURE_0ms_AESL_TW_s.csv  Ref_Delay_PURE_0ms_AESL_WF_s.csv  Ref_Delay_PURE_0ms_AESR_TW_s.csv  Ref_Delay_PURE_0ms_AESR_WF_s.csv  Ref_Delay_PURE_0ms_Analog_TW_s.csv  Ref_Delay_PURE_0ms_Analog_WF_s.csv  Ref_Delay_PURE_0ms_TW_s.csv  Ref_Delay_PURE_0ms_WF_s.csv  Ref_Delay_PURE_2.5ms_AESL_TW_s.csv  Ref_Delay_PURE_2.5ms_AESL_WF_s.csv  Ref_Delay_PURE_2.5ms_AESR_TW_s.csv  Ref_Delay_PURE_2.5ms_AESR_WF_s.csv  Ref_Delay_PURE_2.5ms_Analog_TW_s.csv  Ref_Delay_PURE_2.5ms_Analog_WF_s.csv  Ref_Delay_PURE_2.5ms_TW_s.csv  Ref_Delay_PURE_2.5ms_WF_s.csv  Ref_Delay_PURE_5ms_AESL_TW_s.csv  Ref_Delay_PURE_5ms_AESL_WF_s.csv  Ref_Delay_PURE_5ms_AESR_TW_s.csv  Ref_Delay_PURE_5ms_AESR_WF_s.csv  Ref_Delay_PURE_5ms_Analog_TW_s.csv  Ref_Delay_PURE_5ms_Analog_WF_s.csv  Ref_Delay_PURE_5ms_TW_s.csv  (+168 more)
test-results/: AS-291.xml  AS-292.xml  AS-293.xml  AS-294.xml  AS-85.xml  AS-87.xml  AS-88.xml  S5V_AS-87.xml
tests/: list_of_dut.json  test_audio_settings.py
(+113 files in other folders)
